--- a/src/br/iesb/meuprograma/apresentacao/JFramePrincipal.form
+++ b/src/br/iesb/meuprograma/apresentacao/JFramePrincipal.form
@@ -24,6 +24,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Tramite de Processos..."/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemTramiteProcActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItemPesquisaProc">
               <Properties>
